tests/baselines/reference/constructorStaticParamName.errors.txt
tests/cases/compiler/constructorStaticParamName.ts(4,18): error TS1003: Identifier expected.


==== tests/cases/compiler/constructorStaticParamName.ts (1 errors) ====
    // static as constructor parameter name should only give error if 'use strict'
    
    class test {
        constructor (static) { }
                     ~~~~~~
!!! error TS1003: Identifier expected.
    }
    